# XR_STToolkit

./: README.md
App Development Tools/WebXR/: index.bs
App Development Tools/ZXing.NET/: README.md  build_deployment.cmd  build_deployment_copy_operations.txt  build_deployment_files.txt  build_deployment_source_export.txt  build_deployment_strong_named_files.txt  nuget-pack.bindings.cmd  zxing.nuspec  zxing.vs2015.sln  zxing.vs2017.sln  zxing.vs2019.ci.sln  zxing.vs2019.sln  zxing.vs2022.sln
App Development Tools/ZXing.NET/Clients/CommandLineDecoder/: Config.cs  (+2 more)
App Development Tools/ZXing.NET/docs/: README.md
Content Creation Tools/GIMP/app/: gimpcore.def
Content Creation Tools/GIMP/libgimp/: gimppattern_pdb.h
Content Creation Tools/GIMP/po-libgimp/: ko.po
Content Creation Tools/GIMP/po-plug-ins/: ko.po
Content Creation Tools/Hugin/: .hgtags  CMakeLists.txt  Changes.txt  INSTALL_cmake
Content Creation Tools/Hugin/CMakeModules/: FindCXX11Compiler.cmake  FindEPOXY.cmake  FindOpenEXR.cmake  win_bundle.cmake
Content Creation Tools/Hugin/artwork-src/: update_artwork.sh
Content Creation Tools/Hugin/doc/: cpclean.pod  geocpset.pod  hugin_stacker.pod
Content Creation Tools/Hugin/src/: CMakeLists.txt  hugin_config.h.in.cmake  hugin_shared.h
Content Creation Tools/Hugin/src/hugin1/executor/: CMakeLists.txt  hugin_executor.cpp
Content Creation Tools/Hugin/src/hugin1/executor/user_defined_assistant/: normal.assistant  scanned.assistant  scanned2.assistant
Content Creation Tools/Hugin/src/hugin1/executor/user_defined_output/: focus_stack.executor
(+565 files in other folders)
